# mtg_card_app

./: .gitignore  ARCHITECTURE_CLEANUP_STATUS.md  ARCHITECTURE_FLOW.md  ARCHITECTURE_MIGRATION_COMPLETE.md  CLEANUP_PLAN.md  CLEANUP_PROGRESS.md  CLI_TESTING_PLAN.md  CLI_TESTING_PROGRESS.md  CONTEXT_QUICKSTART.md  CONTEXT_QUICKSTART.md.old  DATA_LAYER_COMPLETE.md  DEPENDENCY_INJECTION_REFACTORING.md  E2E_RETRY_IMPLEMENTATION_COMPLETE.md  E2E_RETRY_MECHANISM.md  E2E_TEST_ANALYSIS.md  LICENSE  ORCHESTRATOR_MIGRATION_PLAN.md  PERFORMANCE_DATA_ISSUE.md  PHASE_1_MOCK_INFRASTRUCTURE_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_STATUS.md  PHASE_5.1_CACHING_RESULTS.md  PHASE_5.1_PERFORMANCE_PLAN.md  PHASE_5_CHECKLIST.md  PHASE_5_DOCUMENTATION_UPDATE.md  PHASE_5_SESSION_SUMMARY.md  PHASE_5_TASKS.md  POLISH_COMPLETE.md  PRE_SCALE_SUMMARY.md  PROJECT_PROGRESS_SUMMARY.md  PROJECT_ROADMAP.md  PROTOCOL_BASED_TESTING.md  QUICKSTART.md  RAG_ARCHITECTURE_DIAGRAM.md  RAG_SERVICE_ABSTRACTION.md  README.md  README.md.old  REFACTORING_COMPLETE.md  SESSION_SUMMARY_CLI_TESTING.md  SETUP_SUMMARY.md  (+17 more)
docs/: CLI_GUIDE.md  README.md
docs/architecture/: ARCHITECTURE_FLOW.md  ARCHITECTURE_OVERVIEW.md  CARD_DATA_SERVICE_ABSTRACTION.md  README.md  SERVICE_ABSTRACTION_COMPLETE.md
docs/archive/: ARCHITECTURE_REFACTOR_IMPACT.md  DOCUMENTATION_ALIGNMENT_COMPLETE.md  PHASE_5_ARCHITECTURE_PLAN.md  PHASE_5_ENHANCEMENTS.md  PHASE_5_EXPORT_COMPLETE.md  PHASE_6_TRACK_2_COMPLETE.md  PHASE_6_TRACK_2_MARKER_ADDED.md  PHASE_6_TRACK_2_UNIT_TESTS.md  RAG_STORAGE_REQUIREMENTS.md  TEST_REFACTORING_COMPLETE.md
docs/performance/: PHASE_4_PERFORMANCE.md
docs/phases/: PHASE_2A_RAG_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_4_MIGRATION_COMPLETE.md  PHASE_5.1_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE_SUMMARY.md  PHASE_6_PLAN.md  PHASE_6_PLANNING_SUMMARY.md  PHASE_6_TRACK_1_SUMMARY.md  PHASE_6_TRACK_2_SUMMARY.md  PHASE_7_PLAN.md
docs/setup/: DATA_LAYER_SETUP.md  FIRST_TIME_SETUP.md  SETUP_ENVIRONMENT.md  SETUP_SUMMARY.md  SSL_FIX_MACOS.md
docs/testing/: E2E_TEST_RESULTS.md  TEST_AUDIT_REPORT.md
examples/: combo_demo.py  config_demo.py  data_layer_demo.py  llm_demo.py  llm_providers_demo.py  orchestrator_demo.py  rag_demo.py  usage_example.py
mtg_card_app/: __init__.py  __main__.py
mtg_card_app/card_search/: __init__.py  __main__.py
mtg_card_app/config/: __init__.py  manager.py  provider_factory.py
mtg_card_app/core/: __init__.py  dependency_manager.py  interactor.py  manager_registry.py  orchestrator.py
mtg_card_app/deck_builder/: __init__.py  __main__.py
mtg_card_app/domain/entities/: __init__.py  card.py  combo.py  deck.py
mtg_card_app/interfaces/card_data/: __init__.py  base.py  scryfall_service.py
mtg_card_app/interfaces/embedding/: __init__.py  sentence_transformer_service.py
mtg_card_app/interfaces/mcp/: __main__.py  manager.py  protocol.py  server.py  service.py
mtg_card_app/interfaces/mcp/servers/: __init__.py  official.py
mtg_card_app/interfaces/mcp/services/: base.py  jsonrpc_stdio_service.py  stdio_service.py
mtg_card_app/interfaces/scryfall/: __init__.py  client.py  exceptions.py
mtg_card_app/interfaces/vector_store/: __init__.py  chroma_service.py
mtg_card_app/managers/: __init__.py
mtg_card_app/managers/card_data/: __init__.py  manager.py
mtg_card_app/managers/card_data/services/: __init__.py  base.py  scryfall_service.py
mtg_card_app/managers/db/: __init__.py  manager.py
mtg_card_app/managers/db/services/: __init__.py  base.py  card_service.py  card_sqlite_service.py  combo_service.py
mtg_card_app/managers/deck/: __init__.py  manager.py
mtg_card_app/managers/llm/: __init__.py  manager.py
mtg_card_app/managers/llm/services/: __init__.py  anthropic_service.py  base.py  gemini_service.py  groq_service.py  ollama_service.py  openai_service.py
mtg_card_app/managers/rag/: __init__.py  manager.py
mtg_card_app/managers/rag/services/: __init__.py
mtg_card_app/managers/rag/services/embedding/: __init__.py  (+2 more)
mtg_card_app/ui/: __init__.py
mtg_card_app/ui/cli/: __init__.py  chat.py  main.py
mtg_card_app/ui/cli/commands/: card.py  combo.py  config.py  deck.py  search.py  setup.py  stats.py  update.py
mtg_card_app/ui/cli/formatters/: __init__.py
mtg_card_app/utils/: query_cache.py  suggestion_cache.py
scripts/: benchmark_cache.py  benchmark_performance.py  bulk_import_cards.py  check_cache_stats.py  demo_features.py  import_oracle_cards.py  migrate_cards_to_sqlite.py  profile_performance.py  test_cache_behavior.py  test_no_combos.py  test_queries.py  test_sqlite_performance.py  test_sqlite_service.py  validate_polish.py  vectorize_cards.py
tests/: __init__.py  conftest.py  test_basic.py
tests/e2e/: __init__.py  retry_decorator.py  test_interactor_combos_e2e.py  test_interactor_filtering_e2e.py  test_interactor_queries_e2e.py  test_llm_service_e2e.py
tests/mocks/: __init__.py  mock_llm_service.py
tests/unit/cli/: conftest.py
tests/unit/cli/commands/: __init__.py  test_card.py  test_combo.py  test_search.py  test_setup.py  test_stats.py  test_update.py
tests/unit/config/: __init__.py  test_manager.py  test_provider_factory.py
tests/unit/core/: test_combo_detection.py  test_interactor_card_operations.py  test_interactor_combo_logic.py  test_interactor_combo_management.py  test_interactor_combos.py  test_interactor_filter_extraction.py  test_interactor_filtering.py  test_interactor_queries.py  test_interactor_query_logic.py  test_orchestrator_filtering.py  test_orchestrator_protocol.py
tests/unit/interfaces/mcp/: test_deck_builder.py  test_deck_builder_e2e.py  test_deck_mcp_tools.py  test_jsonrpc_e2e.py  test_jsonrpc_integration.py  test_jsonrpc_stdio_content_length.py  test_manager.py  test_manager_initialize.py  test_manager_tools.py  test_manager_validation.py
tests/unit/managers/db/: __init__.py
tests/unit/managers/deck/: test_export_deck.py  test_suggest_cards.py
tests/unit/managers/llm/: test_llm_service_protocol.py
tests/unit/managers/rag/: test_embedding_service_protocol.py  test_vector_store_service_protocol.py
(+10 files in other folders)
