[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-card-app"
version = "0.1.0"
description = "An application for finding new MTG card combos"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "topherhaynie"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests~=2.32",
    "chromadb~=1.2",
    "sentence-transformers~=5.1",
    "torch~=2.5",
    "mcp>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-mock~=3.14",
]

[project.scripts]
mtg-card-app = "mtg_card_app.__main__:main"
mtg-deck-builder = "mtg_card_app.deck_builder.__main__:main"
mtg-card-search = "mtg_card_app.card_search.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtg_card_app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

